--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.50MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-730.9KB/s(Youtube:不良林), server: 5.183.176.93, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-7.01MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.70MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-176.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-386.6KB/s(Youtube:不良林), server: 185.172.113.243, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-249.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇫🇷 法国-1.00MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1016.9KB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.07MB/s(Youtube:不良林), server: 5.183.176.81, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.05MB/s(Youtube:不良林), server: 5.183.176.84, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-4.27MB/s(Youtube:不良林), server: 5.183.176.93, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-505.6KB/s(Youtube:不良林), server: 5.183.176.83, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-214.4KB/s(Youtube:不良林), server: 89.31.126.171, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-707.9KB/s(Youtube:不良林), server: 5.183.176.83, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.07MB/s(Youtube:不良林), server: 5.183.176.81, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-4.56MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.07MB/s(Youtube:不良林) 2, server: 5.183.176.81, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-730.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-214.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-707.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1016.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-505.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-730.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-214.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-707.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1016.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-505.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-730.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-214.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-707.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1016.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-505.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-730.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-214.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-707.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1016.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-505.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-730.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-214.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-707.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1016.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-505.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-730.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-214.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-707.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1016.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-505.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-730.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-214.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-707.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-249.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1016.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-505.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
